// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SPDX alpine 1`] = `
"




##### Package: libvncserver
Creator: Organization: Anchore, Inc
Creator: Tool: syft-0.26.0
DataLicense: CC0-1.0
DocumentName: localhost:5000/match-coverage/alpine:latest
DocumentNamespace: https://anchore.com/syft/image/localhost:5000/match-coverage/alpine:latest
ExternalRef: PACKAGE_MANAGER purl pkg:alpine/libvncserver@0.9.9?arch=x86_64
ExternalRef: SECURITY cpe23Type cpe:2.3:a:libvncserver:libvncserver:0.9.9:*:*:*:*:*:*:*
FilesAnalyzed: false
LicenseListVersion: 3.14
PackageCopyrightText: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageLicenseConcluded: GPL-2.0-or-later
PackageLicenseDeclared: GPL-2.0-or-later
PackageName: libvncserver
PackageVersion: 0.9.9
SPDXID: SPDXRef-DOCUMENT
SPDXID: SPDXRef-Package-apk-libvncserver
SPDXVersion: SPDX-2.2"
`;

exports[`SPDX debian 1`] = `
"














##### Package: Pygments
##### Package: apt
##### Package: bundler
##### Package: example-java-app-maven
##### Package: joda-time
##### Package: npm
Creator: Organization: Anchore, Inc
Creator: Tool: syft-0.26.0
DataLicense: CC0-1.0
DocumentName: localhost:5000/match-coverage/debian:latest
DocumentNamespace: https://anchore.com/syft/image/localhost:5000/match-coverage/debian:latest
ExternalRef: PACKAGE_MANAGER purl pkg:deb/debian/apt@1.8.2?arch=amd64
ExternalRef: PACKAGE_MANAGER purl pkg:gem/bundler@2.1.4
ExternalRef: PACKAGE_MANAGER purl pkg:maven/joda-time/joda-time@2.9.2
ExternalRef: PACKAGE_MANAGER purl pkg:maven/org.anchore/example-java-app-maven@0.1.0
ExternalRef: PACKAGE_MANAGER purl pkg:npm/npm@6.14.6
ExternalRef: PACKAGE_MANAGER purl pkg:pypi/Pygments@2.6.1
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:npm:6.14.6:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:Pygments:Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:Pygments:python-Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:Pygments:python_Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:anchore:example-java-app-maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:anchore:example_java_app_maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:andré-arko:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:andré-medeiros:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:andré_arko:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:andré_medeiros:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:apt:apt:1.8.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:bundler:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:carl-lerche:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:carl_lerche:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:chris-morris:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:chris_morris:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:colby-swandale:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:colby_swandale:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:david-rodríguez:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:david_rodríguez:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example-java-app-maven:example-java-app-maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example-java-app-maven:example_java_app_maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example-java-app:example-java-app-maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example-java-app:example_java_app_maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example-java:example-java-app-maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example-java:example_java_app_maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example:example-java-app-maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example:example_java_app_maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example_java:example-java-app-maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example_java:example_java_app_maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example_java_app:example-java-app-maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example_java_app:example_java_app_maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example_java_app_maven:example-java-app-maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:example_java_app_maven:example_java_app_maven:0.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:georg:Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:georg:python-Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:georg:python_Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:georg_brandl:Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:georg_brandl:python-Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:georg_brandl:python_Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:grey-baker:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:grey_baker:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:hiroshi-shibata:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:hiroshi_shibata:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:james-wen:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:james_wen:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:jessica-lynn-suttles:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:jessica_lynn_suttles:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:joda-time:joda-time:2.9.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:joda-time:joda_time:2.9.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:joda:joda-time:2.9.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:joda:joda_time:2.9.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:joda_time:joda-time:2.9.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:joda_time:joda_time:2.9.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:npm:npm:6.14.6:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:python-Pygments:Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:python-Pygments:python-Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:python-Pygments:python_Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:python:Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:python:python-Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:python:python_Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:python_Pygments:Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:python_Pygments:python-Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:python_Pygments:python_Pygments:2.6.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:ruby-lang:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:ruby:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:ruby_lang:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:samuel-giddins:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:samuel_giddins:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:stephanie-morillo:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:stephanie_morillo:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:terence-lee:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:terence_lee:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:tim-moore:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:tim_moore:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:yehuda-katz:bundler:2.1.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:yehuda_katz:bundler:2.1.4:*:*:*:*:*:*:*
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
LicenseListVersion: 3.14
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageLicenseConcluded: Artistic-2.0
PackageLicenseConcluded: MIT
PackageLicenseConcluded: NOASSERTION
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseDeclared: Artistic-2.0
PackageLicenseDeclared: MIT
PackageLicenseDeclared: NOASSERTION
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageName: Pygments
PackageName: apt
PackageName: bundler
PackageName: example-java-app-maven
PackageName: joda-time
PackageName: npm
PackageVersion: 0.1.0
PackageVersion: 1.8.2
PackageVersion: 2.1.4
PackageVersion: 2.6.1
PackageVersion: 2.9.2
PackageVersion: 6.14.6
SPDXID: SPDXRef-DOCUMENT
SPDXID: SPDXRef-Package-deb-apt
SPDXID: SPDXRef-Package-gem-bundler
SPDXID: SPDXRef-Package-java-archive-example-java-app-maven
SPDXID: SPDXRef-Package-java-archive-joda-time
SPDXID: SPDXRef-Package-npm-npm
SPDXID: SPDXRef-Package-python-Pygments
SPDXVersion: SPDX-2.2"
`;

exports[`SPDX npm 1`] = `
"




























##### Package: chownr
##### Package: fs-minipass
##### Package: js-tokens
##### Package: loose-envify
##### Package: minipass
##### Package: minizlib
##### Package: mkdirp
##### Package: object-assign
##### Package: prop-types
##### Package: react
##### Package: react-is
##### Package: tar
##### Package: yallist
Creator: Organization: Anchore, Inc
Creator: Tool: syft-0.26.0
DataLicense: CC0-1.0
DocumentNamespace: https://anchore.com/syft/image/
ExternalRef: PACKAGE_MANAGER purl pkg:npm/chownr@2.0.0
ExternalRef: PACKAGE_MANAGER purl pkg:npm/fs-minipass@2.1.0
ExternalRef: PACKAGE_MANAGER purl pkg:npm/js-tokens@4.0.0
ExternalRef: PACKAGE_MANAGER purl pkg:npm/loose-envify@1.4.0
ExternalRef: PACKAGE_MANAGER purl pkg:npm/minipass@3.1.3
ExternalRef: PACKAGE_MANAGER purl pkg:npm/minizlib@2.1.2
ExternalRef: PACKAGE_MANAGER purl pkg:npm/mkdirp@1.0.4
ExternalRef: PACKAGE_MANAGER purl pkg:npm/object-assign@4.1.1
ExternalRef: PACKAGE_MANAGER purl pkg:npm/prop-types@15.7.2
ExternalRef: PACKAGE_MANAGER purl pkg:npm/react-is@16.13.1
ExternalRef: PACKAGE_MANAGER purl pkg:npm/react@16.14.0
ExternalRef: PACKAGE_MANAGER purl pkg:npm/tar@6.1.0
ExternalRef: PACKAGE_MANAGER purl pkg:npm/yallist@4.0.0
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:chownr:2.0.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:fs-minipass:2.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:fs_minipass:2.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:js-tokens:4.0.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:js_tokens:4.0.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:loose-envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:loose_envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:minipass:3.1.3:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:minizlib:2.1.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:mkdirp:1.0.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:object-assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:object_assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:prop-types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:prop_types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:react-is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:react:16.14.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:react_is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:tar:6.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:yallist:4.0.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:chownr:chownr:2.0.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:fs-minipass:fs-minipass:2.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:fs-minipass:fs_minipass:2.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:fs:fs-minipass:2.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:fs:fs_minipass:2.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:fs_minipass:fs-minipass:2.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:fs_minipass:fs_minipass:2.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:js-tokens:js-tokens:4.0.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:js-tokens:js_tokens:4.0.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:js:js-tokens:4.0.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:js:js_tokens:4.0.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:js_tokens:js-tokens:4.0.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:js_tokens:js_tokens:4.0.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose-envify:loose-envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose-envify:loose_envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose:loose-envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose:loose_envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose_envify:loose-envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose_envify:loose_envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:minipass:minipass:3.1.3:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:minizlib:minizlib:2.1.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:mkdirp:mkdirp:1.0.4:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object-assign:object-assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object-assign:object_assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object:object-assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object:object_assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object_assign:object-assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object_assign:object_assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop-types:prop-types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop-types:prop_types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop:prop-types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop:prop_types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop_types:prop-types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop_types:prop_types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react-is:react-is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react-is:react_is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react:react-is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react:react:16.14.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react:react_is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react_is:react-is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react_is:react_is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:tar:tar:6.1.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:yallist:yallist:4.0.0:*:*:*:*:*:*:*
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
LicenseListVersion: 3.14
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageName: chownr
PackageName: fs-minipass
PackageName: js-tokens
PackageName: loose-envify
PackageName: minipass
PackageName: minizlib
PackageName: mkdirp
PackageName: object-assign
PackageName: prop-types
PackageName: react
PackageName: react-is
PackageName: tar
PackageName: yallist
PackageVersion: 1.0.4
PackageVersion: 1.4.0
PackageVersion: 15.7.2
PackageVersion: 16.13.1
PackageVersion: 16.14.0
PackageVersion: 2.0.0
PackageVersion: 2.1.0
PackageVersion: 2.1.2
PackageVersion: 3.1.3
PackageVersion: 4.0.0
PackageVersion: 4.0.0
PackageVersion: 4.1.1
PackageVersion: 6.1.0
SPDXID: SPDXRef-DOCUMENT
SPDXID: SPDXRef-Package-npm-chownr
SPDXID: SPDXRef-Package-npm-fs-minipass
SPDXID: SPDXRef-Package-npm-js-tokens
SPDXID: SPDXRef-Package-npm-loose-envify
SPDXID: SPDXRef-Package-npm-minipass
SPDXID: SPDXRef-Package-npm-minizlib
SPDXID: SPDXRef-Package-npm-mkdirp
SPDXID: SPDXRef-Package-npm-object-assign
SPDXID: SPDXRef-Package-npm-prop-types
SPDXID: SPDXRef-Package-npm-react
SPDXID: SPDXRef-Package-npm-react-is
SPDXID: SPDXRef-Package-npm-tar
SPDXID: SPDXRef-Package-npm-yallist
SPDXVersion: SPDX-2.2"
`;

exports[`SPDX yarn 1`] = `
"














##### Package: loose-envify
##### Package: object-assign
##### Package: prop-types
##### Package: react
##### Package: react-is
##### Package: trim
Creator: Organization: Anchore, Inc
Creator: Tool: syft-0.26.0
DataLicense: CC0-1.0
DocumentNamespace: https://anchore.com/syft/image/
ExternalRef: PACKAGE_MANAGER purl pkg:npm/loose-envify@1.4.0
ExternalRef: PACKAGE_MANAGER purl pkg:npm/object-assign@4.1.1
ExternalRef: PACKAGE_MANAGER purl pkg:npm/prop-types@15.7.2
ExternalRef: PACKAGE_MANAGER purl pkg:npm/react-is@16.13.1
ExternalRef: PACKAGE_MANAGER purl pkg:npm/react@16.14.0
ExternalRef: PACKAGE_MANAGER purl pkg:npm/trim@0.0.2
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:loose-envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:loose_envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:object-assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:object_assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:prop-types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:prop_types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:react-is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:react:16.14.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:react_is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:*:trim:0.0.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose-envify:loose-envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose-envify:loose_envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose:loose-envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose:loose_envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose_envify:loose-envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:loose_envify:loose_envify:1.4.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object-assign:object-assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object-assign:object_assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object:object-assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object:object_assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object_assign:object-assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:object_assign:object_assign:4.1.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop-types:prop-types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop-types:prop_types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop:prop-types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop:prop_types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop_types:prop-types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:prop_types:prop_types:15.7.2:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react-is:react-is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react-is:react_is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react:react-is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react:react:16.14.0:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react:react_is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react_is:react-is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:react_is:react_is:16.13.1:*:*:*:*:*:*:*
ExternalRef: SECURITY cpe23Type cpe:2.3:a:trim:trim:0.0.2:*:*:*:*:*:*:*
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
FilesAnalyzed: false
LicenseListVersion: 3.14
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageCopyrightText: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageDownloadLocation: NOASSERTION
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseConcluded: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageLicenseDeclared: NONE
PackageName: loose-envify
PackageName: object-assign
PackageName: prop-types
PackageName: react
PackageName: react-is
PackageName: trim
PackageVersion: 0.0.2
PackageVersion: 1.4.0
PackageVersion: 15.7.2
PackageVersion: 16.13.1
PackageVersion: 16.14.0
PackageVersion: 4.1.1
SPDXID: SPDXRef-DOCUMENT
SPDXID: SPDXRef-Package-npm-loose-envify
SPDXID: SPDXRef-Package-npm-object-assign
SPDXID: SPDXRef-Package-npm-prop-types
SPDXID: SPDXRef-Package-npm-react
SPDXID: SPDXRef-Package-npm-react-is
SPDXID: SPDXRef-Package-npm-trim
SPDXVersion: SPDX-2.2"
`;
